--- a/.gitignore
+++ b/.gitignore
@@ -213,3 +213,16 @@ pip-log.txt
 
 #Mr Developer
 .mr.developer.cfg
+.gradle/1.10/taskArtifacts/cache.properties
+.gradle/1.10/taskArtifacts/cache.properties.lock
+.gradle/1.10/taskArtifacts/fileHashes.bin
+.gradle/1.10/taskArtifacts/fileSnapshots.bin
+.gradle/1.10/taskArtifacts/outputFileStates.bin
+.gradle/1.10/taskArtifacts/taskArtifacts.bin
+.gradle/1.11/taskArtifacts/cache.properties
+.gradle/1.11/taskArtifacts/cache.properties.lock
+.gradle/1.11/taskArtifacts/fileHashes.bin
+.gradle/1.11/taskArtifacts/fileSnapshots.bin
+.gradle/1.11/taskArtifacts/outputFileStates.bin
+.gradle/1.11/taskArtifacts/taskArtifacts.bin
+.springBeans
