--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ apply plugin: 'war'
 apply plugin: 'maven'
 apply plugin: 'eclipse'
 apply plugin: 'jetty'
+contextPath = 'sso'
+stopPort = 8099
+stopKey = 'ss'
 repositories {
 	mavenLocal()
 	maven { url "http://maven.oschina.net/content/groups/public/"}
@@ -10,7 +13,7 @@ dependencies {
 	compile 'org.springframework:spring-webmvc:3.2.8.RELEASE'
 	compile 'org.springframework.data:spring-data-jpa:1.5.2.RELEASE'
 	compile 'org.hibernate:hibernate-entitymanager:4.3.5.Final'
-	compile 'org.hibernate:hibernate-entitymanager:4.3.5.Final'
+	compile 'org.hibernate:hibernate-validator:5.1.0.Final'
 	compile 'com.fasterxml.jackson.core:jackson-databind:2.3.3'
 	compile 'org.apache.shiro:shiro-web:1.2.3'
 	compile 'org.apache.shiro:shiro-aspectj:1.2.3'
@@ -18,6 +21,11 @@ dependencies {
 	compile 'mysql:mysql-connector-java:5.1.6'
 	compile 'org.slf4j:slf4j-log4j12:1.7.7'
 	compile 'org.apache.tomcat:tomcat-jdbc:7.0.52'
+	runtime 'javax.servlet:servlet-api:2.5'
 	testCompile 'junit:junit:4.11'
 	testCompile 'org.springframework:spring-test:3.2.8.RELEASE'
+}
+
+tasks.withType(Compile) {
+	options.encoding = "UTF-8"
 }
